# holoscan-proxy

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  config.yaml  config.yml  error_checker.h  main.cpp  main.py  pixi.toml  receiver.py  receiver1.py  receiver2.py  sender.py  socket.h
.github/workflows/: build-rpm.yaml  release-and-build-rpm.yaml
packaging/: holoscan-proxy.service  holoscan-proxy.spec
